// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalWrapper matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
    onResponderGrant={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminationRequest={[Function]}
    onScroll={[Function]}
    onScrollShouldSetResponder={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignSelf": "flex-start",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(0,0,0,0.00)",
            "height": "844px",
            "msFlexItemAlign": "start",
            "width": "100%",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-flexGrow-16y2uox"
          style={
            Object {
              "WebkitAlignSelf": "center",
              "WebkitFlexShrink": 0,
              "alignSelf": "center",
              "flexShrink": 0,
              "marginBottom": "88.51948051948051px",
              "marginTop": "62.33766233766234px",
              "maxWidth": "475px",
              "msFlexItemAlign": "center",
              "msFlexNegative": 0,
              "paddingLeft": "20px",
              "paddingRight": "20px",
              "width": "100%",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "display": "flex",
                "flexDirection": "row",
                "maxHeight": "844px",
                "minHeight": "334px",
                "msFlexDirection": "row",
                "position": "relative",
                "width": "100%",
                "zIndex": 1,
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-flexGrow-16y2uox"
              style={
                Object {
                  "WebkitFlexShrink": 0,
                  "backgroundColor": "rgba(238,238,238,1.00)",
                  "backgroundImage": "url(wave.svg)",
                  "backgroundRepeat": "repeat-y",
                  "borderBottomLeftRadius": "5px",
                  "borderTopLeftRadius": "5px",
                  "flexShrink": 0,
                  "maxWidth": "10px",
                  "minWidth": "10px",
                  "msFlexNegative": 0,
                  "position": "relative",
                  "zIndex": 5,
                }
              }
            />
            <div
              className="css-view-1dbjc4n r-flexGrow-16y2uox r-flexShrink-1wbh5a2"
            >
              <div
                className="css-view-1dbjc4n r-flexGrow-16y2uox"
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,1.00)",
                    "borderBottomRightRadius": "5px",
                    "borderTopRightRadius": "5px",
                    "boxShadow": "0 20px 24px rgba(0, 0, 0, 0.5)",
                    "paddingBottom": "16px",
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": "16px",
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
              >
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModalWrapper matches snapshot with properties 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-WebkitOverflowScrolling-150rngu r-flexDirection-eqz5dr r-flexGrow-16y2uox r-flexShrink-1wbh5a2 r-overflowX-11yh6sk r-overflowY-1rnoaur r-transform-1sncvnh"
    onResponderGrant={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminationRequest={[Function]}
    onScroll={[Function]}
    onScrollShouldSetResponder={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    onWheel={[Function]}
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignSelf": "flex-start",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(0,0,0,0.00)",
            "height": "844px",
            "msFlexItemAlign": "start",
            "width": "100%",
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-flexGrow-16y2uox"
          style={
            Object {
              "WebkitAlignSelf": "center",
              "WebkitFlexShrink": 0,
              "alignSelf": "center",
              "flexShrink": 0,
              "marginBottom": "88.51948051948051px",
              "marginTop": "62.33766233766234px",
              "maxWidth": "475px",
              "msFlexItemAlign": "center",
              "msFlexNegative": 0,
              "paddingLeft": "20px",
              "paddingRight": "20px",
              "width": "100%",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "display": "flex",
                "flexDirection": "row",
                "maxHeight": "844px",
                "minHeight": "334px",
                "msFlexDirection": "row",
                "position": "relative",
                "width": "100%",
                "zIndex": 1,
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-flexGrow-16y2uox"
              style={
                Object {
                  "WebkitFlexShrink": 0,
                  "backgroundColor": "rgba(238,238,238,1.00)",
                  "backgroundImage": "url(wave.svg)",
                  "backgroundRepeat": "repeat-y",
                  "borderBottomLeftRadius": "5px",
                  "borderTopLeftRadius": "5px",
                  "flexShrink": 0,
                  "marginBottom": "16px",
                  "maxWidth": "10px",
                  "minWidth": "10px",
                  "msFlexNegative": 0,
                  "position": "relative",
                  "zIndex": 5,
                }
              }
            />
            <div
              className="css-view-1dbjc4n r-flexGrow-16y2uox r-flexShrink-1wbh5a2"
            >
              <div
                className="css-view-1dbjc4n r-flexGrow-16y2uox"
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,1.00)",
                    "borderBottomRightRadius": "0px",
                    "borderTopRightRadius": "5px",
                    "boxShadow": "0 20px 24px rgba(0, 0, 0, 0.5)",
                    "paddingBottom": "16px",
                    "paddingLeft": "16px",
                    "paddingRight": "16px",
                    "paddingTop": "16px",
                    "position": "relative",
                    "zIndex": 1,
                  }
                }
              >
                Testing
              </div>
              <div
                className="css-view-1dbjc4n"
                style={
                  Object {
                    "backgroundImage": "linear-gradient(40deg, transparent 75%, #fff 76%), linear-gradient(-40deg, transparent 75%, #fff 76%)",
                    "backgroundPosition": "-8px 0",
                    "backgroundRepeat": "repeat-x",
                    "backgroundSize": "16px 16px",
                    "height": "16px",
                    "position": "relative",
                    "width": "100%",
                    "zIndex": 5,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
